# SFML-RPG

./: CMakeLists.txt  Enemy.cpp  Enemy.h  Math.cpp  Math.h  Player.cpp  Player.h  README.md  Weapon.cpp  Weapon.h  \  framerate.cpp  framerate.h  main  main.cpp
